# atsamd-tests

./: README.md  run-all.sh
lib/: Cargo.toml
lib/shared/: Cargo.toml
lib/shared-metro/: Cargo.toml
lib/shared-metro/src/: display.rs  input.rs  lib.rs  tests.rs
lib/shared-pygamer/: Cargo.toml
lib/shared-pygamer/src/: display.rs  input.rs  lib.rs  monotonic.rs  tests.rs
lib/shared/src/: display.rs  lib.rs  monotonic.rs  screens.rs  tests.rs
lib/shared/src/tests/: async_stress.rs  delay_ns.rs  hal_delay_ns.rs  hal_rtc.rs  mod.rs  rtc.rs
metro/: Cargo.toml
metro/basic/: Cargo.toml
metro/basic/src/: main.rs
metro/delay-ns/: Cargo.toml
metro/delay-ns/src/: main.rs
metro/embassy-stress/: Cargo.toml  tasks.py
metro/embassy-stress/src/: main.rs
metro/embassy-test/: Cargo.toml
metro/embassy-test/src/: main.rs
metro/hal-delay-ns/: Cargo.toml
metro/hal-delay-ns/src/: main.rs
metro/hal-rtc/: Cargo.toml
metro/hal-rtc/src/: main.rs
metro/rtc/: Cargo.toml
metro/rtc/src/: main.rs
metro/rtic-stress/: Cargo.toml  tasks.py
metro/rtic-stress/src/: main.rs  tasks.rs
metro/usb-clock/: Cargo.toml  connect.py
metro/usb-clock/src/: main.rs
metro/usb-serial-example/: Cargo.toml
metro/usb-serial-example/src/: main.rs
pygamer/: Cargo.toml
pygamer/aes-test/: Cargo.toml
pygamer/aes-test/src/: main.rs
pygamer/basic/: Cargo.toml
pygamer/basic/src/: main.rs
pygamer/clock-tree/: Cargo.toml
pygamer/delay-ns/: Cargo.toml
pygamer/delay-ns/src/: main.rs
pygamer/dmac/: Cargo.toml
pygamer/dmac-rtic/: Cargo.toml
pygamer/dmac-rtic/src/: main.rs
pygamer/dmac/src/: main.rs
pygamer/dsu/: Cargo.toml
pygamer/dsu/src/: main.rs
pygamer/embassy-stress/: Cargo.toml
pygamer/embassy-stress/src/: main.rs  tasks.rs
pygamer/hal-clock-tree/: Cargo.toml
pygamer/hal-clock-tree/src/: main.rs
pygamer/hal-delay-ns/: Cargo.toml
pygamer/hal-delay-ns/src/: main.rs
pygamer/hal-rtc/: Cargo.toml
pygamer/hal-rtc/src/: main.rs
pygamer/icm/: Cargo.toml
pygamer/icm/src/: main.rs
pygamer/monotonic-basic/: Cargo.toml
pygamer/monotonic-basic/src/: main.rs
pygamer/monotonic-count-sequence/: Cargo.toml
pygamer/monotonic-count-sequence/src/: main.rs
pygamer/monotonic-disable-pend/: Cargo.toml
pygamer/monotonic-disable-pend/src/: main.rs
pygamer/monotonic-stress/: Cargo.toml  tmp
pygamer/monotonic-stress/src/: main.rs
pygamer/qspi/: Cargo.toml
pygamer/qspi/src/: main.rs
pygamer/rtc/: Cargo.toml
pygamer/rtc/src/: main.rs
pygamer/rtic-basic/: Cargo.toml
pygamer/rtic-basic/src/: main.rs
pygamer/rtic-count-sequence/: Cargo.toml
pygamer/rtic-count-sequence/src/: main.rs
pygamer/rtic-stress/: Cargo.toml
pygamer/rtic-stress/src/: main.rs  tasks.rs
pygamer/usb/: Cargo.toml
pygamer/usb/src/: main.rs
