[workspace]
members = [
  "shared",
  "shared-metro",
  "shared-pygamer",
]
resolver = "2"

[patch.crates-io]
atsamd-hal = {path = "../../atsamd/hal"}
metro_m0 = {path = "../../atsamd/boards/metro_m0"}
pygamer = {path = "../../atsamd/boards/pygamer"}
sh1107 = {path = "../../sh1107"}
#rtic-time = {path = "../../rtic/rtic-time"}
