[workspace]
members = [
  "basic",
  "delay-ns",
  "rtc",
  "rtic-stress",
  "usb-clock",
]
resolver = "2"

[patch.crates-io]
atsamd-hal = {path = "../../atsamd/hal"}
atsamd-usb-serial = {path = "../../atsamd-usb-serial"}
metro_m0 = {path = "../../atsamd/boards/metro_m0"}
sh1107 = {path = "../../sh1107"}
