[workspace]
members = [
  "aes-test",
  "basic",
  "clock-tree",
  "delay-ns",
  "rtc",
  "rtic-basic",
  "rtic-count-sequence",
  "rtic-stress",
]
resolver = "2"

[patch.crates-io]
atsamd-hal = {path = "../../atsamd/hal"}
pygamer = {path = "../../atsamd/boards/pygamer"}

[profile.dev]
debug = true 
incremental = false 
lto = "thin" # thin for debug speed
opt-level = 2 

[profile.release]
lto = "fat"
opt-level = 's'
