[package]
edition = "2021"
name = "shared-metro"
version = "0.1.0"

[dependencies]
derive_more = {version = "2.0.1", default-features = false, features = ["from"]}
sh1107 = "0.3.5"
shared = {path = "../shared", features = ["metro"]}

[features]
clock1k = ["shared/clock1k"]
clock32k = ["shared/clock32k"]
systick = ["shared/systick"]
