[package]
edition = "2021"
name = "basic"
version = "0.1.0"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
# This has to be in the binary crates of the `task` and `main` macros will fail.
embassy-executor = {version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "nightly"]}
shared-metro = {path = "../../lib/shared-metro", features = ["systick"]}
