[package]
edition = "2021"
name = "rtic-stress"
version = "0.1.0"

[dependencies]
atsamd-hal = {version = "0.22", features = ["rtic"]}
shared-metro = {path = "../../lib/shared-metro", features = ["rtic"]}

[features]
clock1k = ["shared-metro/clock1k"]
clock32k = ["shared-metro/clock32k"]
systick = ["shared-metro/systick"]
