[package]
edition = "2024"
name = "usb-clock"
version = "0.1.0"

[dependencies]
heapless = "0.9.1"
metro_m0 = {version = "0.19.2", features = ["usb"]}
nom = {version = "8.0", default-features = false}
shared-metro = {path = "../../lib/shared-metro", features = ["clock1k"]}
usb-device = "0.3.2"
usbd-serial = "0.2.2"
