[package]
edition = "2021"
# This cannot simply be named `aes` due to the dependency with the same name.
name = "aes-test"
version = "0.1.0"

[dependencies]
aes = "0.8.4"
atsamd-hal = {version = "0.22", features = ["enable_unsafe_aes_newblock_cipher"]}
shared-pygamer = {path = "../../lib/shared-pygamer"}
